--- a/join.html
+++ b/join.html
@@ -5,10 +5,6 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link rel="stylesheet" href="./styles/styles.css" />
-		<link
-			href="https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800|Poppins:400,700&display=swap"
-			rel="stylesheet"
-		/>
 
 		<title>Join us</title>
 	</head>
@@ -55,16 +51,16 @@
 				<br />
 				<p>
 					Be part of the mission. Send us your motivation of why just you should
-					be the next space traveler
+					be the next space traveler.
 				</p>
 			</div>
 
 			<section class="form-wrapper" id="form">
 				<form action="https://formspree.io/xdoannlo" method="POST">
 					<div class="grid">
-						<label for="first-name">
+						<label for="first-name" class="grid-item first-name">
 							First name
-							<br />
+
 							<input
 								type="text"
 								name="First name"
@@ -74,9 +70,8 @@
 							/>
 						</label>
 
-						<label for="last-name">
+						<label for="last-name" class="grid-item last-name">
 							Last name
-							<br />
 							<input
 								type="text"
 								name="Last name"
@@ -86,9 +81,8 @@
 							/>
 						</label>
 
-						<label for="date-of-birth">
+						<label for="date-of-birth" class="grid-item date-of-birth">
 							Date of birth
-							<br />
 							<input
 								type="text"
 								name="Date of birth"
@@ -98,9 +92,8 @@
 							/>
 						</label>
 
-						<label for="profession">
+						<label for="profession" class="grid-item profession">
 							Profession
-							<br />
 							<input
 								type="text"
 								name="Profession"
@@ -110,9 +103,8 @@
 							/>
 						</label>
 
-						<label for="prime-skill">
+						<label for="prime-skill" class="grid-item prime-skill">
 							Prime skill
-							<br />
 							<input
 								type="text"
 								name="Prime skill"
@@ -125,7 +117,6 @@
 
 					<label for="motivation"
 						>Motivation
-						<br />
 						<textarea
 							name="Motivation"
 							id="motivation"
